@@ -5,6 +5,7 @@ Revision history for Perl extension RPi::WiringPi.
         - bumped prereq RPi::Pin to 2.3606
         - added I2C, Serial and SPI configuration details at the top of the FAQ
           (closes #63; closes #64)
+        - re-enabled "both" interrupt test file (closes #48)
 
 2.3624  2018-03-27
         - added blurb in FAQ Testing section that describes setting up I2C and
